--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,19 @@
-version: '3'
+version: '3.5'
 
 services:
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
+      args:
+        uid: 1000
     environment:
-      DB_HOST: db
-      DB_DATABASE: ecommerce
-      DB_USERNAME: root
-      DB_PASSWORD: root
+      - DB_HOST=db
+      - DB_DATABASE=ecommerce
+      - DB_USERNAME=root
+      - DB_PASSWORD=root
+      - APACHE_RUN_USER=#1000
+      - APACHE_RUN_GROUP=#1000
     ports:
       - 8000:8000
     volumes:
