--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     ports:
       - 8000:80
     volumes:
-      - ./backend:/app/backend
+      - ./backend:/var/www/html
     depends_on:
       - db
     networks:
@@ -39,8 +39,10 @@ services:
 
   db:
     image: mysql:5.7.22
+    ports:
+      - 9999:3306
     environment:
-      MYSQL_DATABASE: 'auth'
+      MYSQL_DATABASE: 'ecommerce'
       MYSQL_USER: 'root'
       MYSQL_PASSWORD: 'root'
       MYSQL_ROOT_PASSWORD: 'root'
